[project]
name = "learning-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=0.2.6",
    "langchain-openai>=0.1.22",
    "langchain-anthropic>=0.1.23",
    "langchain>=0.2.14",
    "langchain-fireworks>=0.1.7",
    "python-dotenv>=1.0.1",
    "langchain-community>=0.2.17",
    "tavily-python>=0.4.0",
    "lightrag-hku>=1.3.0",
    "langmem>=0.0.17",
    "pandas>=2.2.3",
    "ipython>=9.0.2",
    "pipmaster>=0.5.4",
    "networkx>=3.4.2",
    "graspologic>=3.4.1",
    "future>=1.0.0",
    "gensim>=4.3.3",
    "aiohttp>=3.11.12",
    "configparser>=7.2.0",
    "setuptools>=78.1.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.9.0",
    "xlsxwriter>=3.2.2",
    "nano-vectordb>=0.0.4.3",
    "psycopg>=3.2.6",
    "psycopg-pool>=3.2.6",
    "langgraph-checkpoint-postgres>=2.0.19",
    "asyncio>=3.4.3",
    "fastapi>=0.115.12",
    "psycopg2>=2.9.10",
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.react_agent", "react_agent"]
[tool.setuptools.package-dir]
"langgraph.templates.react_agent" = "src/react_agent"
"react_agent" = "src/react_agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.1.71",
]
